Accesibilité: Corrections sur contrast ratio

--- a/style.css
+++ b/style.css
@@ -99,10 +99,6 @@ a:hover {
     background-attachment: fixed;
 }
 
-.d-bloc {
-    color: #FFF;
-}
-
 .d-bloc button:hover {
     color: #FFF;
 }
@@ -764,10 +760,6 @@ h4 {
 
 .bgc-white {
     background-color: #FFFFFF;
-}
-
-.bgc-dark-slate-blue {
-    background-color: #364577;
 }
 
 .bgc-atomic-tangerine {
